--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-protobuf": "^3.10.0-rc.1",
+    "grpc-web": "^1.0.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
