--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.5"
 services:
   envoy:
     build:
@@ -14,6 +14,15 @@ services:
     build:
       context: ../
       dockerfile: ./deploy/docker/goserver/Dockerfile
-    image: grpcp-exam/server
+    image: grpc-exam/server
     ports:
       - "9090:9090"
+  web:
+    build:
+      context: ../
+      dockerfile: ./deploy/docker/web/Dockerfile
+      args:
+        REACT_APP_API_URL: http://localhost:8080
+    image: grpc-exam/web
+    ports:
+      - "3001:80"
